--- a/cinema-service-dev.properties
+++ b/cinema-service-dev.properties
@@ -1,5 +1,5 @@
 management.endpoints.web.exposure.include=*
-spring.datasource.url=jdbc:h2:mem:books
+spring.datasource.url=jdbc:h2:mem:Movie
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
